# BakalarskaPraca

./: .gitignore  200512__Timovy_projekt_final.docx  bp_rk_veduci.doc  output.docx  rk_bp2_sablona_2023.docx  ~$output.docx  ~WRL3650.tmp
PCL_TUTORIAL/: 1.0.cpp  2.cpp  CMakeLists.txt  alignment.cpp  concatenate_clouds.cpp  cylinder.cpp  example.cpp  heat_map.cpp  kinect2_grabber.h  matrix_transform.cpp  ply_view.cpp  save_to_pcd.cpp  sphere.cpp
PCL_TUTORIAL/build11/: CMakeCache.txt  Makefile
PCL_TUTORIAL/build22/: CMakeCache.txt  Makefile  alignment  cmake_install.cmake  compile_commands.json  concatenate  cylinder  make_pcd  output.pcd  screenshot-1677146379.cam  sphere  table_scene_mug_stereo_textured_cylinder.pcd  table_scene_mug_stereo_textured_plane.pcd
PCL_TUTORIAL/build_test/: CMakeCache.txt  Makefile  alignment  cmake_install.cmake  compile_commands.json  concatenate  cylinder  sphere
PCL_TUTORIAL/pcd/: chat.py  test_cylinder.ply
PCL_TUTORIAL/pcd/blender/: alignment.txt  matrixies.txt
PCL_TUTORIAL/pcd/blender/alignments/: test2_alignment.pcd  test3_alignment.pcd  test4_alignment.pcd  test_alignment.pcd  x-1m_alignment.pcd  x-1m_y-1m_alignment.pcd  x-1m_y1m_alignment.pcd  x1m_y-1m_alignment.pcd  x1m_y1m_alignment.pcd  y-1m_alignment.pcd  y-1m_camera_alignment.pcd  y1m_alignment.pcd  z1m_alignment.pcd
PCL_TUTORIAL/pcd/blender/cylinders/: test2_cylinder.pcd  test_cylinder.pcd  x-1m_cylinder.pcd  x-1m_y-1m_cylinder.pcd  (+8 more)
PCL_TUTORIAL/pcd/blender2/: matrixies2.txt  score.txt
PCL_TUTORIAL/pcd/blender3/: console_out.txt  errors.ods  matrixies2.txt
(+243 files in other folders)
